flex/engines/graph_db/grin/include/rust/grin_all.rs

extern "C" {
    #[doc = " @brief Get the adjacent list of given direction, vertex and edge type.\n This API is only available for property graph.\n To get a adjacent list chain of all types, using APIs in GRIN extension.\n @param GRIN_GRAPH The graph.\n @param GRIN_DIRECTION The direction of the adjacent list.\n @param GRIN_VERTEX The vertex.\n @return The adjacent list."]
    pub fn grin_get_adjacent_list_by_edge_type(
        arg1: GRIN_GRAPH,
        arg2: GRIN_DIRECTION,
        arg3: GRIN_VERTEX,
        arg4: GRIN_EDGE_TYPE,
    ) -> GRIN_ADJACENT_LIST;
}
extern "C" {
    pub fn grin_equal_vertex_type(
        arg1: GRIN_GRAPH,
        arg2: GRIN_VERTEX_TYPE,
        arg3: GRIN_VERTEX_TYPE,
    ) -> bool;
}
extern "C" {
    pub fn grin_get_vertex_type(arg1: GRIN_GRAPH, arg2: GRIN_VERTEX) -> GRIN_VERTEX_TYPE;
}
extern "C" {
    pub fn grin_destroy_vertex_type(arg1: GRIN_GRAPH, arg2: GRIN_VERTEX_TYPE);
}
extern "C" {
    #[doc = " @brief Get the vertex type list of the graph\n This API is only available for property graph.\n It lists all the vertex types in the graph.\n @param GRIN_GRAPH The graph.\n @return The vertex type list."]
    pub fn grin_get_vertex_type_list(arg1: GRIN_GRAPH) -> GRIN_VERTEX_TYPE_LIST;
}
extern "C" {
    pub fn grin_destroy_vertex_type_list(arg1: GRIN_GRAPH, arg2: GRIN_VERTEX_TYPE_LIST);
}
extern "C" {
    pub fn grin_create_vertex_type_list(arg1: GRIN_GRAPH) -> GRIN_VERTEX_TYPE_LIST;
}
extern "C" {
    pub fn grin_insert_vertex_type_to_list(
        arg1: GRIN_GRAPH,
        arg2: GRIN_VERTEX_TYPE_LIST,
        arg3: GRIN_VERTEX_TYPE,
    ) -> bool;
}
extern "C" {
    pub fn grin_get_vertex_type_list_size(arg1: GRIN_GRAPH, arg2: GRIN_VERTEX_TYPE_LIST) -> usize;
}
extern "C" {
    pub fn grin_get_vertex_type_from_list(
        arg1: GRIN_GRAPH,
        arg2: GRIN_VERTEX_TYPE_LIST,
        arg3: usize,
    ) -> GRIN_VERTEX_TYPE;
}
extern "C" {
    #[doc = " @brief Get the vertex type name.\n This API is enabled by ``GRIN_WITH_VERTEX_TYPE_NAME``,\n meaning that the graph has a unique name for each vertex type.\n @param GRIN_GRAPH The graph.\n @param GRIN_VERTEX_TYPE The vertex type.\n @return The vertex type name of string."]
    pub fn grin_get_vertex_type_name(
        arg1: GRIN_GRAPH,
        arg2: GRIN_VERTEX_TYPE,
    ) -> *const ::std::os::raw::c_char;
}
extern "C" {
    #[doc = " @brief Get the vertex type by name.\n This API is enabled by ``GRIN_WITH_VERTEX_TYPE_NAME``,\n meaning that the graph has a unique name for each vertex type.\n @param GRIN_GRAPH The graph.\n @param name The vertex type name.\n @return The vertex type."]
    pub fn grin_get_vertex_type_by_name(
        arg1: GRIN_GRAPH,
        name: *const ::std::os::raw::c_char,
    ) -> GRIN_VERTEX_TYPE;
}
extern "C" {
    #[doc = " @brief Get the vertex type id.\n This API is enabled by ``GRIN_TRAIT_NATURAL_ID_FOR_VERTEX_TYPE``,\n meaning that the graph has naturally increasing ids for vertex types.\n @param GRIN_GRAPH The graph.\n @param GRIN_VERTEX_TYPE The vertex type.\n @return The vertex type id."]
    pub fn grin_get_vertex_type_id(arg1: GRIN_GRAPH, arg2: GRIN_VERTEX_TYPE)
        -> GRIN_VERTEX_TYPE_ID;
}
extern "C" {
    #[doc = " @brief Get the vertex type by id.\n This API is enabled by ``GRIN_TRAIT_NATURAL_ID_FOR_VERTEX_TYPE``,\n meaning that the graph has naturally increasing ids for vertex types.\n @param GRIN_GRAPH The graph.\n @param GRIN_VERTEX_TYPE_ID The vertex type id.\n @return The vertex type."]
    pub fn grin_get_vertex_type_by_id(
        arg1: GRIN_GRAPH,
        arg2: GRIN_VERTEX_TYPE_ID,
    ) -> GRIN_VERTEX_TYPE;
}
extern "C" {
    pub fn grin_equal_edge_type(
        arg1: GRIN_GRAPH,
        arg2: GRIN_EDGE_TYPE,
        arg3: GRIN_EDGE_TYPE,
    ) -> bool;
}
extern "C" {
    pub fn grin_get_edge_type(arg1: GRIN_GRAPH, arg2: GRIN_EDGE) -> GRIN_EDGE_TYPE;
}
extern "C" {
    pub fn grin_destroy_edge_type(arg1: GRIN_GRAPH, arg2: GRIN_EDGE_TYPE);
}
extern "C" {
    pub fn grin_get_edge_type_list(arg1: GRIN_GRAPH) -> GRIN_EDGE_TYPE_LIST;
}
extern "C" {
    pub fn grin_destroy_edge_type_list(arg1: GRIN_GRAPH, arg2: GRIN_EDGE_TYPE_LIST);
}
extern "C" {
    pub fn grin_create_edge_type_list(arg1: GRIN_GRAPH) -> GRIN_EDGE_TYPE_LIST;
}
extern "C" {
    pub fn grin_insert_edge_type_to_list(
        arg1: GRIN_GRAPH,
        arg2: GRIN_EDGE_TYPE_LIST,
        arg3: GRIN_EDGE_TYPE,
    ) -> bool;
}
extern "C" {
    pub fn grin_get_edge_type_list_size(arg1: GRIN_GRAPH, arg2: GRIN_EDGE_TYPE_LIST) -> usize;
}
extern "C" {
    pub fn grin_get_edge_type_from_list(
        arg1: GRIN_GRAPH,
        arg2: GRIN_EDGE_TYPE_LIST,
        arg3: usize,
    ) -> GRIN_EDGE_TYPE;
}
extern "C" {
    pub fn grin_get_edge_type_name(
        arg1: GRIN_GRAPH,
        arg2: GRIN_EDGE_TYPE,
    ) -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn grin_get_edge_type_by_name(
        arg1: GRIN_GRAPH,
        arg2: *const ::std::os::raw::c_char,
    ) -> GRIN_EDGE_TYPE;
}
extern "C" {
    pub fn grin_get_edge_type_id(arg1: GRIN_GRAPH, arg2: GRIN_EDGE_TYPE) -> GRIN_EDGE_TYPE_ID;
}
extern "C" {
    pub fn grin_get_edge_type_by_id(arg1: GRIN_GRAPH, arg2: GRIN_EDGE_TYPE_ID) -> GRIN_EDGE_TYPE;
}
extern "C" {
    #[doc = " @brief Get source vertex types related to an edge type.\n GRIN assumes the relation between edge type and pairs of vertex types is\n many-to-many.\n To return the related pairs of vertex types, GRIN provides two APIs to get\n the src and dst vertex types respectively.\n The returned vertex type lists are of the same size,\n and the src/dst vertex types are aligned with their positions in the lists.\n @param GRIN_GRAPH The graph.\n @param GRIN_EDGE_TYPE The edge type.\n @return The vertex type list of source."]
    pub fn grin_get_src_types_by_edge_type(
        arg1: GRIN_GRAPH,
        arg2: GRIN_EDGE_TYPE,
    ) -> GRIN_VERTEX_TYPE_LIST;
}
extern "C" {
    #[doc = " @brief Get destination vertex types related to an edge type.\n GRIN assumes the relation between edge type and pairs of vertex types is\n many-to-many.\n To return the related pairs of vertex types, GRIN provides two APIs to get\n the src and dst vertex types respectively.\n The returned vertex type lists are of the same size,\n and the src/dst vertex types are aligned with their positions in the lists.\n @param GRIN_GRAPH The graph.\n @param GRIN_EDGE_TYPE The edge type.\n @return The vertex type list of destination."]
    pub fn grin_get_dst_types_by_edge_type(
        arg1: GRIN_GRAPH,
        arg2: GRIN_EDGE_TYPE,
    ) -> GRIN_VERTEX_TYPE_LIST;
}
extern "C" {
    #[doc = " @brief Get edge types related to a pair of vertex types.\n GRIN assumes the relation between edge type and pairs of vertex types is\n many-to-many.\n @param GRIN_GRAPH The graph.\n @param GRIN_VERTEX_TYPE The source vertex type.\n @param GRIN_VERTEX_TYPE The destination vertex type.\n @return The related edge type list."]
    pub fn grin_get_edge_types_by_vertex_type_pair(
        arg1: GRIN_GRAPH,
        arg2: GRIN_VERTEX_TYPE,
        arg3: GRIN_VERTEX_TYPE,
    ) -> GRIN_EDGE_TYPE_LIST;
}
extern "C" {
    pub fn grin_get_label_by_name(
        arg1: GRIN_GRAPH,
        arg2: *const ::std::os::raw::c_char,
    ) -> GRIN_LABEL;
}
extern "C" {
    pub fn grin_destroy_label(arg1: GRIN_GRAPH, arg2: GRIN_LABEL);
}
extern "C" {
    pub fn grin_get_label_name(arg1: GRIN_GRAPH, arg2: GRIN_LABEL)
        -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn grin_destroy_label_list(arg1: GRIN_GRAPH, arg2: GRIN_LABEL_LIST);
}
extern "C" {
    pub fn grin_get_label_list_size(arg1: GRIN_GRAPH, arg2: GRIN_LABEL_LIST) -> usize;
}
extern "C" {
    pub fn grin_get_label_from_list(
        arg1: GRIN_GRAPH,
        arg2: GRIN_LABEL_LIST,
        arg3: usize,
    ) -> GRIN_LABEL;
}
extern "C" {
    #[doc = " @brief assign a label to a vertex\n @param GRIN_GRAPH the graph\n @param GRIN_LABEL the label\n @param GRIN_VERTEX the vertex\n @return whether succeed"]
    pub fn grin_assign_label_to_vertex(
        arg1: GRIN_GRAPH,
        arg2: GRIN_LABEL,
        arg3: GRIN_VERTEX,
    ) -> bool;
}
extern "C" {
    #[doc = " @brief get the label list of a vertex\n @param GRIN_GRAPH the graph\n @param GRIN_VERTEX the vertex"]
    pub fn grin_get_vertex_label_list(arg1: GRIN_GRAPH, arg2: GRIN_VERTEX) -> GRIN_LABEL_LIST;
}
extern "C" {
    #[doc = " @brief get the vertex list by label\n @param GRIN_GRAPH the graph\n @param GRIN_LABEL the label"]
    pub fn grin_get_vertex_list_by_label(arg1: GRIN_GRAPH, arg2: GRIN_LABEL) -> GRIN_VERTEX_LIST;
}
extern "C" {
    #[doc = " @brief filtering an existing vertex list by label\n @param GRIN_VERTEX_LIST the existing vertex list\n @param GRIN_LABEL the label"]
    pub fn grin_select_label_for_vertex_list(
        arg1: GRIN_GRAPH,
        arg2: GRIN_LABEL,
        arg3: GRIN_VERTEX_LIST,
    ) -> GRIN_VERTEX_LIST;
}
extern "C" {
    #[doc = " @brief assign a label to a edge\n @param GRIN_GRAPH the graph\n @param GRIN_LABEL the label\n @param GRIN_EDGE the edge\n @return whether succeed"]
    pub fn grin_assign_label_to_edge(arg1: GRIN_GRAPH, arg2: GRIN_LABEL, arg3: GRIN_EDGE) -> bool;
}
extern "C" {
    #[doc = " @brief get the label list of a edge\n @param GRIN_GRAPH the graph\n @param GRIN_EDGE the edge"]
    pub fn grin_get_edge_label_list(arg1: GRIN_GRAPH, arg2: GRIN_EDGE) -> GRIN_LABEL_LIST;
}
extern "C" {
    #[doc = " @brief get the edge list by label\n @param GRIN_GRAPH the graph\n @param GRIN_LABEL the label"]
    pub fn grin_get_edge_list_by_label(arg1: GRIN_GRAPH, arg2: GRIN_LABEL) -> GRIN_EDGE_LIST;
}
extern "C" {
    #[doc = " @brief filtering an existing edge list by label\n @param GRIN_EDGE_LIST the existing edge list\n @param GRIN_LABEL the label"]
    pub fn grin_select_label_for_edge_list(
        arg1: GRIN_GRAPH,
        arg2: GRIN_LABEL,
        arg3: GRIN_EDGE_LIST,
    ) -> GRIN_EDGE_LIST;
}
extern "C" {
    pub fn grin_smaller_vertex(arg1: GRIN_GRAPH, arg2: GRIN_VERTEX, arg3: GRIN_VERTEX) -> bool;
}
extern "C" {
    #[doc = " @brief Get the position of a vertex in a sorted list\n caller must guarantee the input vertex list is sorted to get the correct result\n @param GRIN_GRAPH The graph\n @param GRIN_VERTEX_LIST The sorted vertex list\n @param GRIN_VERTEX The vertex to find\n @return The position of the vertex"]
    pub fn grin_get_position_of_vertex_from_sorted_list(
        arg1: GRIN_GRAPH,
        arg2: GRIN_VERTEX_LIST,
        arg3: GRIN_VERTEX,
    ) -> usize;
}
extern "C" {
    #[doc = " @brief Get the int64 internal id of a vertex\n @param GRIN_GRAPH The graph\n @param GRIN_VERTEX The vertex\n @return The int64 internal id of the vertex"]
    pub fn grin_get_vertex_internal_id_by_type(
        arg1: GRIN_GRAPH,
        arg2: GRIN_VERTEX_TYPE,
        arg3: GRIN_VERTEX,
    ) -> ::std::os::raw::c_longlong;
}
extern "C" {
    #[doc = " @brief Get the vertex by internal id under type\n @param GRIN_GRAPH The graph\n @param GRIN_VERTEX_TYPE The vertex type\n @param id The internal id of the vertex under type\n @return The vertex"]
    pub fn grin_get_vertex_by_internal_id_by_type(
        arg1: GRIN_GRAPH,
        arg2: GRIN_VERTEX_TYPE,
        id: ::std::os::raw::c_longlong,
    ) -> GRIN_VERTEX;
}
extern "C" {
    #[doc = " @brief Get the upper bound of internal id under type.\n @param GRIN_GRAPH The graph\n @param GRIN_VERTEX_TYPE The vertex type\n @return The upper bound of internal id under type"]
    pub fn grin_get_vertex_internal_id_upper_bound_by_type(
        arg1: GRIN_GRAPH,
        arg2: GRIN_VERTEX_TYPE,
    ) -> ::std::os::raw::c_longlong;
}
extern "C" {
    #[doc = " @brief Get the lower bound internal id under type.\n @param GRIN_GRAPH The graph\n @param GRIN_VERTEX_TYPE The vertex type\n @return The lower bound internal id under type"]
    pub fn grin_get_vertex_internal_id_lower_bound_by_type(
        arg1: GRIN_GRAPH,
        arg2: GRIN_VERTEX_TYPE,
    ) -> ::std::os::raw::c_longlong;
}
